Fix version table alignment by removing inconsistent font size

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -824,9 +824,6 @@ hr {
     vertical-align: top;
 }
 
-.version-table td:last-child {
-    font-size: 0.9rem;
-}
 
 /* --- Doc pages --- */
 
